force-app/main/default/objects/Carte__c/Carte__c.object-meta.xml
<CustomObject>
    <description>Carte abonné, UI/UU</description>
    <label>Carte</label>
    <nameField>
        <label>Numéro de carte</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cartes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>