force-app/main/default/objects/Carte__c/fields/Abonn__c.field-meta.xml
<CustomField>
    <fullName>Abonn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abonné</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cartes</relationshipLabel>
    <relationshipName>Cartes</relationshipName>
    <type>Lookup</type>
</CustomField>