force-app/main/default/objects/Carte__c/fields/CarteDematerialise__c.field-meta.xml
<CustomField>
    <fullName>CarteDematerialise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carte Dématérialisé</label>
    <type>Checkbox</type>
</CustomField>