force-app/main/default/objects/Carte__c/fields/Contrat__c.field-meta.xml
<CustomField>
    <fullName>Contrat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Voir si on maintient ce champs, ca va demander un trigger pour maj l&#39;id suite aux synchro z360.</description>
    <label>Contrat</label>
    <referenceTo>Zuora__Subscription__c</referenceTo>
    <relationshipLabel>Cartes</relationshipLabel>
    <relationshipName>Cartes</relationshipName>
    <type>Lookup</type>
</CustomField>