force-app/main/default/objects/Carte__c/fields/DateDebutVal__c.field-meta.xml
<CustomField>
    <fullName>DateDebutVal__c</fullName>
    <label>Date début validité</label>
    <type>DateTime</type>
</CustomField>