force-app/main/default/objects/Carte__c/fields/DateEdition__c.field-meta.xml
<CustomField>
    <fullName>DateEdition__c</fullName>
    <label>Date d&#39;édition</label>
    <type>DateTime</type>
</CustomField>