force-app/main/default/objects/Carte__c/fields/DateExpiration__c.field-meta.xml
<CustomField>
    <fullName>DateExpiration__c</fullName>
    <label>Date d&#39;expiration</label>
    <type>Date</type>
</CustomField>