force-app/main/default/objects/Carte__c/fields/DateFinVal__c.field-meta.xml
<CustomField>
    <fullName>DateFinVal__c</fullName>
    <label>Date fin validité</label>
    <type>DateTime</type>
</CustomField>