force-app/main/default/objects/Carte__c/fields/DemandeClient__c.field-meta.xml
<CustomField>
    <fullName>DemandeClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demande Client</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cartes à imprimer</relationshipLabel>
    <relationshipName>Cartes</relationshipName>
    <type>Lookup</type>
</CustomField>