force-app/main/default/objects/Carte__c/fields/ID_CONTRACT_BILENDI__c.field-meta.xml
<CustomField>
    <fullName>ID_CONTRACT_BILENDI__c</fullName>
    <label>ID_CONTRACT_BILENDI</label>
    <length>18</length>
    <type>Text</type>
</CustomField>