force-app/main/default/objects/Carte__c/fields/LieuEdition__c.field-meta.xml
<CustomField>
    <fullName>LieuEdition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lieu d&#39;édition</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Cartes imprimés</relationshipLabel>
    <relationshipName>Cartes</relationshipName>
    <type>Lookup</type>
</CustomField>