force-app/main/default/objects/Carte__c/fields/Nom__c.field-meta.xml
<CustomField>
    <fullName>Nom__c</fullName>
    <description>nom du porteur de la carte</description>
    <label>Nom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>