force-app/main/default/objects/Carte__c/fields/NumeroContrat__c.field-meta.xml
<CustomField>
    <fullName>NumeroContrat__c</fullName>
    <description>contient le numero de la souscription Zuora</description>
    <label>Numéro contrat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>