force-app/main/default/objects/Carte__c/fields/Origine_desactivation__c.field-meta.xml
<CustomField>
    <fullName>Origine_desactivation__c</fullName>
    <label>Origine désactivation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>Perdu</fullName>
            </value>
            <value>
                <fullName>Abimé</fullName>
            </value>
            <value>
                <fullName>Changement de photo</fullName>
            </value>
            <value>
                <fullName>Changement de nom</fullName>
            </value>
            <value>
                <fullName>Carte démagnétisée</fullName>
            </value>
            <value>
                <fullName>Photo illisible</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>