force-app/main/default/objects/Carte__c/fields/Prenom__c.field-meta.xml
<CustomField>
    <fullName>Prenom__c</fullName>
    <description>prénom du porteur</description>
    <label>Prénom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>