force-app/main/default/objects/Carte__c/fields/TypeCarte__c.field-meta.xml
<CustomField>
    <fullName>TypeCarte__c</fullName>
    <label>Type de carte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UI1</fullName>
            </value>
            <value>
                <fullName>UI2</fullName>
            </value>
            <value>
                <fullName>UI3</fullName>
            </value>
            <value>
                <fullName>UU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>