force-app/main/default/objects/Carte__c/fields/TypeEnvoi__c.field-meta.xml
<CustomField>
    <fullName>TypeEnvoi__c</fullName>
    <label>Type d’envoi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Postal</fullName>
            </value>
            <value>
                <fullName>Click and collect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>